# AthenaDocsNG

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/about/: index.md
docs/advanced/: custom-prompts.md  performance-optimization.md
docs/appendices/: developer-guide.md  faq.md  glossary.md  troubleshooting.md
docs/best-practices/: scenarios.md
docs/concepts/: agent-architecture.md  memory-system.md  message-processing.md  model-service.md  tool-system.md  willingness-system.md
docs/developers/: index.md
docs/development/: extension-development.md
docs/extensions/: code-interpreter.md  favor.md  mcp.md
docs/features/: adapters.md  index.md  memory-management.md  personality.md  tool-system.md  willingness-system.md
docs/getting-started/: basic-configuration.md  faq.md  first-run.md  installation.md  overview.md  prerequisites.md  quick-start.md
docs/overview/: features.md  introduction.md
docs/reference/: commands.md  configuration.md  index.md
docs/stylesheets/: extra.css
docs/troubleshooting/: configuration.md  installation.md
docs/user-guide/: concepts.md  getting-started.md  getting-started.md.md  index.md  migrate-from-v1.md  migrate-from-v1.md.md
docs/user-guide/configuration/: api-configuration.md  bot-settings.md  image-viewer.md  index.md  main-api.md  memory-slot.md  memory-slots.md  parameters.md  prompt.md  prompts.md  verifier.md
