[project]
name = "athenadocsng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.15",
    "mkdocs-mermaid2-plugin>=1.2.1",
]
